<resources>
    <string name="app_name">LapakJahit</string>
    <string name="facebook_app_id">425743917805867</string>
    <string name="keranjangbelanja">Keranjang Belanja</string>
    <string name="title_activity_shopping_cart">ShoppingCartActivity</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <!--login-->
    <string name="login">Login</string>
    <string name="username_mail">EMAIL/USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_timeout">Oops! Your Connection Timed Out</string>
    <string name="error_auth_failure">Oops! RottenTomatoes Says It Doesn\'t Recognize You</string>
    <string name="error_network">Oops! RottenTomatoes Server Just Messed Up</string>
    <string name="error_parser">Oops! Data Received Was An Unreadable Mess</string>

    <!--daftar-->
    <string name="daftar">Daftar</string>
    <string name="nama_lengkap">NAMA LENGKAP</string>
    <string name="email">EMAIL</string>
    <string name="username">USERNAME</string>
    <string name="action_sign_up_short">Daftar</string>

    <string-array name="tabs">
        <item>Produk</item>
        <item>Kustom</item>
    </string-array>
    <string-array name="tabspembelian">
        <item>Status</item>
        <item>Detail</item>
        <item>Alamat</item>
    </string-array>
    <string-array name="tabs_transaksi">
        <item>Tagihan</item>
        <item>Pembelian</item>
        <item>Penjualan</item>
    </string-array>
    <string name="fw_kebaya">Kebaya</string>
    <string name="fw_blazer">Blazer</string>
    <string name="fw_dress">Dress</string>
    <string name="fw_gaun">Gaun</string>
    <string name="fw_kemeja">Kemeja</string>
    <string name="fw_jeans">Jeans</string>
    <string name="fw_celanadsr">Celana Dasar</string>
    <string name="fw_rok">Rok</string>
    <string name="fw_kaos">Kaos</string>

    <string name="fp_baju_koko">Baju Koko</string>
    <string name="fp_tuxedo">Tuxedo</string>
    <string name="fp_kemeja">Kemeja</string>
    <string name="fp_sweater">Sweater</string>
    <string name="fp_jaket">Jaket</string>
    <string name="fp_kaos">Kaos</string>
    <string name="fp_jeans">Jeans</string>
    <string name="fp_celana_dasar">Celana Dasar</string>
    <string name="fp_topi">Topi</string>

    <string name="chat">Chat</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="noticelogin">Segera login di LapakJahit agar kamu bisa \n menandai berbagai macam barang \n favoritmu</string>

    <string name="detail_tagihan">Detail Tagihan</string>
    <string name="no_tagihan">Nomor Tagihan</string>
    <string name="status">Status</string>
    <string name="jumlah">Jumlah</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="alamat">Alamat</string>
    <string name="daftar_barang">Daftar Barang</string>
    <string name="salin">SALIN</string>
    <string name="detail">Detail</string>
    <string name="longtext">Vimium-FF is a new Firefox WebExtension that is marked as experimental right now that brings Vim-like controls to the Firefox web browser. What this means? Basically, that you get a lot of keyboard shortcuts that you can use for navigation, and other browser features. Several add-ons are already available that add the functionality to the</string>
    <string-array name="list_detail">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="nama_barang">Nama Barang</string>
    <string name="katogeri_barang">Kategori Barang</string>
    <string name="deskripsi_barang">Deskripsi Barang</string>
    <string name="detail_barang">Detail Barang</string>
    <string name="pengiriman">Pengiriman (Opsional)</string>
    <string name="simpan_draf">Simpan Draf</string>
    <string name="jual">Jual</string>

    <string name="upload_gambar">Upload Gambar</string>
    <string name="ukuran_gambar">Ukuran foto minimal 300x300px, dengan format JPG, JPEG, PNG</string>
    <string name="galeri">Upload dari Galeri</string>
    <string name="kamera">Ambil dari Kamera</string>
    <string name="gambar_utama">GAMBAR UTAMA</string>
    <string name="gambar_lainnya">GAMBAR LAINNYA</string>

    <string name="tambah_gambar">Tambah Gambar</string>
    <string name="bayar">Bayar</string>
</resources>
