<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar2"  />

    <LinearLayout
        android:id="@+id/view"
        android:layout_below="@+id/app_bar"
        android:layout_above="@+id/layoutButtonGaleri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/fab_margin">

        <TextView
            android:textSize="@dimen/size_text_primary"
            android:text="@string/upload_gambar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>

        <TextView
            android:textSize="@dimen/fab_margin"
            android:text="@string/ukuran_gambar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"/>

        <TextView
            android:textSize="@dimen/fab_margin"
            android:text="@string/gambar_utama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@android:color/darker_gray"/>

        <cilok.com.lapakjahit.view.SquareImageView
            android:id="@+id/gambar_utama"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/image_border"/>

        <TextView
            android:textSize="@dimen/fab_margin"
            android:text="@string/gambar_lainnya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="4">

            <cilok.com.lapakjahit.view.SquareImageView
                android:id="@+id/gambar_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/image_border"/>

            <cilok.com.lapakjahit.view.SquareImageView
                android:id="@+id/gambar_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/image_border"/>

            <cilok.com.lapakjahit.view.SquareImageView
                android:id="@+id/gambar_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/image_border"/>

            <cilok.com.lapakjahit.view.SquareImageView
                android:id="@+id/gambar_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/image_border"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_above="@+id/layoutButton"
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutButtonGaleri">

        <Button
            android:id="@+id/button_galeri"
            android:background="@color/colorAbu"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/galeri"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/button_kamera2"
            android:background="@color/colorAbu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kamera"
            android:textColor="@android:color/black"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutButton"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp">

        <Button
            android:id="@+id/button_simpan"
            android:background="@color/colorAbu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/simpan_draf"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/button_jual"
            android:background="@color/colorDaftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/jual"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</RelativeLayout>
