<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="cilok.com.lapakjahit.DaftarActivity">

    <include
        android:id="@+id/app_bar_login_signup"
        layout="@layout/app_bar2" />

    <LinearLayout
        android:layout_margin="@dimen/fab_margin"
        android:orientation="vertical"
        android:layout_below="@id/app_bar_login_signup"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textSize="@dimen/size_text_primary"
            android:text="@string/daftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/nama_lengkap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/namalengkap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionId="@+id/daftar"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionId="@+id/daftar"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionId="@+id/daftar"
                android:imeActionLabel="@string/action_sign_up_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/email_sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_up_short"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@color/colorDaftar"
            />

    </LinearLayout>

</RelativeLayout>
