<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar2"/>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_below="@+id/app_bar"
        android:layout_margin="@dimen/fab_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/nama_barang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/namabarang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType=""
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:text="@string/katogeri_barang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/kategoribarang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType=""
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:text="@string/deskripsi_barang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/desbarang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType=""
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:text="@string/detail_barang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/detailbarang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType=""
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/layoutButton"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <Button
            android:id="@+id/button_simpan"
            android:background="@color/colorAbu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/simpan_draf"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/button_jual"
            android:background="@color/colorDaftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/jual"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</RelativeLayout>
