<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="cilok.com.lapakjahit.fragments.FragmentTransaksiTagihan">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"/>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_below="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_margin="@dimen/fab_margin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="@dimen/fab_margin"
                android:text="@string/no_tagihan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edittext_no_tagihan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_marginTop="@dimen/fab_margin"
                android:text="@string/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edittext_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_marginTop="@dimen/fab_margin"
                android:text="@string/jumlah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/edittext_jumlah"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/button_salin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/salin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary2"/>

                <ExpandableListView
                    android:id="@+id/list_detail"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:divider="@android:color/black"/>

            </LinearLayout>


            <TextView
                android:layout_marginTop="@dimen/fab_margin"
                android:text="@string/metode_pembayaran"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edittext_pembayaran"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_marginTop="@dimen/fab_margin"
                android:text="@string/alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edittext_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_marginTop="@dimen/fab_margin"
                android:text="@string/daftar_barang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edittext_daftar_barang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
